day_1/ingressDeployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ngnix-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: ngnix-ingress-spec
    rules: 
      - host: matomilucky.com
        http:
            paths:
              - path: /
                pathType: Prefix
                backend:
                    service:
                        name: ngnix
                        port:
                          number: 8082
